# roboat

./: .gitignore  CONVENTIONS.md  Cargo.toml  LICENSE  README.md  RESOURCES.md  cliff.toml
examples/: accept_trade.rs  avatar_catalog_search.rs  decline_trade.rs  download_animation.rs  fetch_asset_info.rs  fetch_asset_thumbnails.rs  fetch_avatar_headshot_thumbnails.rs  fetch_avatar_thumbnails.rs  fetch_client_user_info.rs  fetch_collectible_product_id.rs  fetch_collectible_product_ids_bulk.rs  fetch_group_role_members.rs  fetch_group_roles.rs  fetch_inbound_messages.rs  fetch_inbound_trades.rs  fetch_item_details.rs  fetch_item_details_raw.rs  fetch_item_thumbnails.rs  fetch_multiple_assets_info.rs  fetch_new_limited_details.rs  fetch_resellers.rs  fetch_trade_count.rs  fetch_trade_details.rs  fetch_ugc_limited_details.rs  fetch_unread_message_count.rs  fetch_user_details.rs  fetch_user_details_by_username.rs  fetch_user_presence.rs  fetch_user_sales.rs  fetch_users_games.rs  force_refresh_xcsrf.rs  friend_request_action.rs  friend_requests.rs  friends_list.rs  get_client_user_info.rs  get_inbound_trades.rs  get_item_details.rs  get_non_tradable_limited_details.rs  get_product_id.rs  get_resellers.rs  (+17 more)
src/: client.rs  economy.rs  lib.rs  response_processing.rs  validation.rs
src/apis/: mod.rs  request_types.rs
src/assetdelivery/: mod.rs  request_types.rs
src/auth/: mod.rs
src/bedev2/: mod.rs  request_types.rs
src/catalog/: avatar_catalog.rs  catalog_types.rs  mod.rs  request_types.rs
src/catalog/avatar_catalog/: mod.rs  request_types.rs  reqwest_types.rs  search_query.rs
src/chat/: mod.rs  request_types.rs
src/economy/: mod.rs  request_types.rs  reqwest_types.rs
src/friends/: mod.rs  request_types.rs
src/games/: mod.rs  request_types.rs
src/groups/: mod.rs  request_types.rs
src/ide/: ide_types.rs  mod.rs
src/presence/: mod.rs  request_types.rs
src/private_messages/: mod.rs  request_types.rs
src/thumbnails/: mod.rs  request_types.rs
src/trades/: mod.rs  request_types.rs  reqwest_types.rs
src/users/: mod.rs  request_types.rs  reqwest_types.rs
src/users/internal/: reqwest_types.rs
