[package]
authors = ["fekie <fekiewekie@gmail.com>"]
categories = ["api-bindings"]
description = "A high performance interface for the Roblox API."
edition = "2021"
keywords = ["roblox", "api", "roblox-api"]
license = "MIT"
name = "roboat"
readme = "README.md"
repository = "https://github.com/Chloe-Woahie/roboat"
version = "0.35.0"

[dependencies]
reqwest = { version = "0.12.20", default-features = false, features = [
    "rustls-tls",
    "json",
    "multipart",
    "blocking",
    # For Automatic decompression for files from roblox
    "gzip",
] }
thiserror = "1.0.40"
serde = { version = "1.0.136", features = ["derive"] }
serde_with = { version = "3.13.0", features = ["macros"] }

serde_json = "1.0.94"
tokio = { version = "1.27.0", features = ["full"] }
uuid = { version = "1.3.1", features = ["fast-rng", "v4"] }
base64 = "0.21.2"
bytes = "1.10.1"


[dev-dependencies]
clap = { version = "4.1.13", features = ["derive"] }
